cloud클래스 삽입

--- a/banner.html
+++ b/banner.html
@@ -13,10 +13,10 @@
             <div class="left rel">
                 <img src="./img/plane.png" class="abs plane" alt="비행기">
                 <img src="./img/text0.png" class="text0 rel" alt="어학캠프">
-                <img src="./img/text1.png" clas="text1" alt="떠나볼까">
+                <img src="./img/text1.png" class="text1" alt="떠나볼까">
             </div>
             <div class="right rel d-flex flex-column">
-                <div class="abs d-flex jcb">
+                <div class="abs d-flex jcb cloud">
                     <img src="./img/ani1.png" alt="">
                     <img src="./img/ani2.png" alt="">
                 </div>
